2009-01-19  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-image-anchor): Fix docstring.
	(toplevel): Fix w3m-image-anchor-face's alias.

2009-01-15  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-images): Put the 'full alt text' on new
	'w3m-image-alt' property.
	(w3m-print-this-url): Print the content of 'w3m-image-alt'.

	* w3m-util.el (w3m-image-alt): New macro.

2009-01-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* doc/Makefile.in (.texi.info): Use --no-split.

2009-01-11  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m): Move last session restoring asking afterward, so that
	the restoring wouldn't be avoided by w3m-input-url's input.

	* w3m-session.el (w3m-session-last-autosave-session): Follow the above
	change.

2009-01-10  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m): Check whether to load the last autosaved
	sessions.  Suggested by Samuel Wales <samologist@gmail.com>.

	* w3m-session.el (w3m-session-automatic-keep-number): New variable.
	Suggested by Samuel Wales <samologist@gmail.com>.
	(w3m-session-automatic-save): Use it.
	(w3m-session-last-autosave-session): New function.
	(w3m-session-load-last-sessions): New variable.

	* w3m.el (w3m-image-anchor): New face.
	(w3m-fontify-images): Use it.

2009-01-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-language): Allow the value like "Japanese (UTF-8)" of
	current-language-environment.

	* w3m-symbol.el (w3m-symbol): Ditto.

	* w3mhack.el (w3mhack-makeinfo): Use locale-coding-system for Emacs to
	encode Japanese messages.

2009-01-09  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-create-text-page, w3m-goto-url): Check if the url is
	arrived before getting real-url.

2009-01-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (top): Add the variable definitions of
	`w3m-tab-menubar-make-items-preitems' and `w3m-session-menu-items-pre'
	to avoid byte-compile warnings.
	(w3m-setup-menu): Move the postion of session menu.
	(w3m-mouse-major-mode-menu): Add session menu.
